lighten colour of paws etc.

--- a/tikzmarmots.tex
+++ b/tikzmarmots.tex
@@ -4,16 +4,16 @@
 \begin{document}
 
 \begin{tikzpicture}
-\fill[black] 
+\fill[brown!50!black] 
 	(6.1855,-6.4808) .. controls (6.1855,-6.5093) and (6.0935,-6.6591) .. 
 	(6.0191,-6.6591) .. controls (5.9447,-6.6591) and (5.8843,-6.6361) .. 
 	(5.8843,-6.6076) .. controls (5.8843,-6.5792) and (5.9447,-6.5561) .. 
 	(6.0191,-6.5561) .. controls (6.0935,-6.5561) and (6.1855,-6.4524) .. 
 	(6.1855,-6.4808) -- cycle;
-\fill[black] (5.83,-6.75) ellipse (0.13 and 0.05);
-\fill[black] (5.55,-6.75) ellipse (0.13 and 0.05);
-\fill[black] (5.55,-5.75) ellipse (0.05 and 0.07);
-\fill[black] (5.83,-5.75) ellipse (0.05 and 0.07);
+\fill[brown!50!black] (5.83,-6.75) ellipse (0.13 and 0.05);
+\fill[brown!50!black] (5.55,-6.75) ellipse (0.13 and 0.05);
+\fill[brown!50!black] (5.55,-5.75) ellipse (0.05 and 0.07);
+\fill[brown!50!black] (5.83,-5.75) ellipse (0.05 and 0.07);
 \fill[brown] 
 	(6.0179,-6.3421) .. controls (6.0179,-6.7010) and (5.8855,-6.7463) .. 
 	(5.7038,-6.7463) .. controls (5.5222,-6.7463) and (5.3602,-6.7010) .. 
@@ -26,12 +26,12 @@
 	(5.4473,-6.4579) .. controls (5.4473,-6.2933) and (5.5535,-6.1598) .. 
 	(5.6845,-6.1598) .. controls (5.8154,-6.1598) and (5.9216,-6.2933) .. 
 	(5.9216,-6.4579) -- cycle;
-\fill[black,rotate around={-70:(5.9,-6.35)}] (5.9,-6.35) ellipse (0.13 and 0.07);
-\fill[black,rotate around={70:(5.48,-6.35)}] (5.48,-6.35) ellipse (0.13 and 0.07);
+\fill[brown!50!black,rotate around={70:(5.9,-6.35)}] (5.9,-6.35) ellipse (0.13 and 0.07);
+\fill[brown!50!black,rotate around={-70:(5.48,-6.35)}] (5.48,-6.35) ellipse (0.13 and 0.07);
 \fill[brown!50!white] (5.68,-6.05) ellipse (0.13 and 0.07);
-\fill[black] (5.68,-5.98) circle (0.04);
-\fill[black] (5.58,-5.89) circle (0.03);
-\fill[black] (5.78,-5.89) circle (0.03);
+\fill[brown!50!black] (5.68,-5.98) circle (0.04);
+\fill[brown!50!black] (5.58,-5.89) circle (0.03);
+\fill[brown!50!black] (5.78,-5.89) circle (0.03);
 \fill[white] (5.66,-6.075) rectangle ++(0.04,-0.03);
 \draw (5.77,-6.02) arc [start angle=-20, end angle=-160, radius=0.09];
 \end{tikzpicture}
