adjusted size to match the ducks -> that way it will be possible to re-use items

--- a/tikzmarmots.tex
+++ b/tikzmarmots.tex
@@ -4,35 +4,30 @@
 \begin{document}
 
 \begin{tikzpicture}
-\fill[brown!50!black] 
-	(6.1855,-6.4808) .. controls (6.1855,-6.5093) and (6.0935,-6.6591) .. 
-	(6.0191,-6.6591) .. controls (5.9447,-6.6591) and (5.8843,-6.6361) .. 
-	(5.8843,-6.6076) .. controls (5.8843,-6.5792) and (5.9447,-6.5561) .. 
-	(6.0191,-6.5561) .. controls (6.0935,-6.5561) and (6.1855,-6.4524) .. 
-	(6.1855,-6.4808) -- cycle;
-\fill[brown!50!black] (5.83,-6.75) ellipse (0.13 and 0.05);
-\fill[brown!50!black] (5.55,-6.75) ellipse (0.13 and 0.05);
-\fill[brown!50!black] (5.55,-5.75) ellipse (0.05 and 0.07);
-\fill[brown!50!black] (5.83,-5.75) ellipse (0.05 and 0.07);
-\fill[brown] 
-	(6.0179,-6.3421) .. controls (6.0179,-6.7010) and (5.8855,-6.7463) .. 
-	(5.7038,-6.7463) .. controls (5.5222,-6.7463) and (5.3602,-6.7010) .. 
-	(5.3602,-6.3421) .. controls (5.3602,-5.9832) and (5.5074,-5.6923) .. 
-	(5.6890,-5.6923) .. controls (5.8707,-5.6923) and (6.0179,-5.9832) .. 
-	(6.0179,-6.3421) -- cycle;
-\fill[brown!50!white] 
-	(5.9216,-6.4579) .. controls (5.9216,-6.6225) and (5.8261,-6.6433) .. 
-	(5.6951,-6.6433) .. controls (5.5642,-6.6433) and (5.4473,-6.6225) .. 
-	(5.4473,-6.4579) .. controls (5.4473,-6.2933) and (5.5535,-6.1598) .. 
-	(5.6845,-6.1598) .. controls (5.8154,-6.1598) and (5.9216,-6.2933) .. 
-	(5.9216,-6.4579) -- cycle;
-\fill[brown!50!black,rotate around={70:(5.9,-6.35)}] (5.9,-6.35) ellipse (0.13 and 0.07);
-\fill[brown!50!black,rotate around={-70:(5.48,-6.35)}] (5.48,-6.35) ellipse (0.13 and 0.07);
-\fill[brown!50!white] (5.68,-6.05) ellipse (0.13 and 0.07);
-\fill[brown!50!black] (5.68,-5.98) circle (0.04);
-\fill[brown!50!black] (5.58,-5.89) circle (0.03);
-\fill[brown!50!black] (5.78,-5.89) circle (0.03);
-\fill[white] (5.66,-6.075) rectangle ++(0.04,-0.03);
-\draw (5.77,-6.02) arc [start angle=-20, end angle=-160, radius=0.09];
+% Feet %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\fill[brown!50!black] (1.18,0.2) ellipse (0.23 and 0.09); 
+\fill[brown!50!black] (0.67,0.2) ellipse (0.23 and 0.09);
+% Ears %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\fill[brown!50!black] (1.18,2.03) ellipse (0.09 and 0.13);
+\fill[brown!50!black] (0.67,2.03) ellipse (0.09 and 0.13);
+% Tail %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\fill[brown!50!black] (1.81,0.67) .. controls (1.79,0.40) and (1.27,0.24) .. (1.26,0.44) .. controls (1.24,0.56) and (1.37,0.51) .. (1.50,0.53) .. controls (1.62,0.54) and (1.81,0.72) .. (1.81,0.67) -- cycle;
+% Body %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\fill[brown] (1.52,0.92) .. controls (1.52,0.26) and (1.28,0.18) .. (0.95,0.18) .. controls (0.61,0.18) and (0.32,0.26) .. (0.32,0.92) .. controls (0.32,1.58) and (0.59,2.11) .. (0.92,2.11) .. controls (1.25,2.11) and (1.52,1.58) .. (1.52,0.92) -- cycle;
+% Belly %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\fill[brown!50!white] (1.35,0.71) .. controls (1.35,0.41) and (1.17,0.37) .. (0.92,0.37) .. controls (0.69,0.37) and (0.48,0.41) .. (0.48,0.71) .. controls (0.48,1.01) and (0.67,1.26) .. (0.91,1.26) .. controls (1.15,1.26) and (1.35,1.01) .. (1.35,0.71) -- cycle;
+% Arms %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\fill[brown!50!black,rotate around={70:(1.31,0.93)}] (1.31,0.93) ellipse (0.24 and 0.13);
+\fill[brown!50!black,rotate around={-70:(0.54,0.93)}] (0.54,0.93) ellipse (0.24 and 0.13);
+% Muzzle %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\fill[brown!50!white] (0.925,1.47) ellipse (0.23 and 0.13); 
+% Nose %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\fill[brown!50!black] (0.925,1.6) circle (0.08);
+% Eyes %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\fill[brown!50!black] (0.77,1.77) circle (0.05); 
+\fill[brown!50!black] (1.08,1.77) circle (0.05); 
+% Mouth %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\draw (1.07,1.51) arc [start angle=-20, end angle=-160, radius=0.16];
 \end{tikzpicture}
+
 \end{document}
