added duck accessories

--- a/tikzmarmots.tex
+++ b/tikzmarmots.tex
@@ -1,5 +1,6 @@
 \documentclass{standalone}
 \usepackage{tikz}
+\usepackage{tikzducks}
 
 \begin{document}
 
@@ -28,6 +29,8 @@
 \fill[brown!50!black] (1.08,1.77) circle (0.05); 
 % Mouth %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \draw (1.07,1.51) arc [start angle=-20, end angle=-160, radius=0.16];
+
+\duck[noduck,crown,hockey=gray]
 \end{tikzpicture}
 
 \end{document}
