added soon-to-be CTAN address

--- a/tikzmarmots-doc.tex
+++ b/tikzmarmots-doc.tex
@@ -111,7 +111,7 @@
 					jacket=blue!50!black]
 		\end{tikzpicture})\\[0.8em]
 		\url{https://github.com/samcarter8/tikzmarmots}\\
-%		\url{https://www.ctan.org/pkg/tikzmarmots}
+		\url{https://www.ctan.org/pkg/tikzmarmots}
 	}{samcarter}}
 \date{Version 0.1 -- \today}
 
@@ -127,7 +127,7 @@ Inspired by the enthusiasms of the TeX.Stackexchange user \href{https://tex.stac
 Unlike its older sibling, the \tikzducks package, this packages focuses on drawing the marmot itself. Additional accessories are not part of the package, but can be taken from other sources.
 
 This package is work in progress, therefore I would be happy to hear your feedback and ideas how to improve the package. The head version of the source code can be found on \url{github.com/samcarter8/tikzmarmots}, including a bug tracker -- please make constructive use of it! 
-%A more stable package version can be found on \CTAN (\url{www.ctan.org/pkg/tikzmarmots}) and is included in both \miktex and \texlive as \tikzmarmots. 
+A more stable package version can be found on \CTAN (\url{www.ctan.org/pkg/tikzmarmots}) and is included in both \miktex and \texlive as \tikzmarmots. 
 If you seek any other assistance (not bug reports/feature requests), I suggest asking on \href{https://tex.stackexchange.com}{TeX.Stackexchange}.
 
 %\subsection{Acknowledgements}
