https://chat.stackexchange.com/transcript/message/45590513#45590513

--- a/tikzmarmots-doc.tex
+++ b/tikzmarmots-doc.tex
@@ -122,7 +122,7 @@
 \section{Introduction}
 \label{intro}
 
-Inspired by the enthusiasms of the TeX.Stackexchange user \href{https://tex.stackexchange.com/users/121799/marmot}{@marmot} for animals of the same species, this little package can draw marmots using \TikZ.
+Inspired by the enthusiasms of the TeX.Stackexchange user \href{https://tex.stackexchange.com/users/121799/marmot}{@marmot} for beings of the same species, this little package can draw marmots using \TikZ.
 
 Unlike its older sibling, the \tikzducks package, this packages focuses on drawing the marmot itself. Additional accessories are not part of the package, but can be taken from other sources.
 
