--- a/tikzmarmots.sty
+++ b/tikzmarmots.sty
@@ -1,4 +1,4 @@
-% !TeX root = ./test.tex
+% !TeX root = ./testing/test.tex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % The tikzmarmots package
