--- a/testing/test.tex
+++ b/testing/test.tex
@@ -3,16 +3,21 @@
 \usepackage{tikz}
 \usetikzlibrary{marmots}
 
+%\selectcolormodel{gray}
+
 \begin{document}
 
 \begin{tikzpicture}
-\draw (0,0) pic[
-    marmot/body=blue,
-    marmot/blush,
-  ] {marmot};
-\draw (2,0) pic[
-    scale=1.4,
-  ] {marmot};
+\marmot
+\end{tikzpicture}
+
+
+\begin{tikzpicture}
+\marmot[3D]
+\end{tikzpicture}
+
+\begin{tikzpicture}
+\marmot[body=pink, 3D]
 \end{tikzpicture}
 
 \end{document}
