--- a/tikzmarmots.sty
+++ b/tikzmarmots.sty
@@ -31,6 +31,7 @@
 \newif\ifmarmot@blush
 \newif\ifmarmot@whiskers
 \newif\ifmarmot@teeth
+\newif\ifmarmot@threeD
 
 \tikzset{
   %
@@ -50,7 +51,8 @@
   blush/.code		     = \marmot@blushtrue,
   whiskers/.code     = \marmot@whiskerstrue \def\marmot@whiskers{#1},
   whiskers/.default  = gray,
-  teeth/.code        = \marmot@teethtrue,
+  teeth/.code        = \marmot@teethtrue, 
+  3D/.code			 = \marmot@threeDtrue,
 }
 
 \def\marmot@draw{%
@@ -68,35 +70,100 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % Feet %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\fill[\marmot@body!50!black] (1.18,0.2) ellipse (0.23 and 0.09); 
-\fill[\marmot@body!50!black] (0.67,0.2) ellipse (0.23 and 0.09);
+\ifmarmot@threeD
+	\shade[ball color=\marmot@body!50!black]
+\else
+	\fill[\marmot@body!50!black]
+\fi
+(1.18,0.2) ellipse (0.23 and 0.09); 
+\ifmarmot@threeD
+	\shade[ball color=\marmot@body!50!black]
+\else
+	\fill[\marmot@body!50!black]
+\fi
+(0.67,0.2) ellipse (0.23 and 0.09);
 %
 % Ears %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\fill[\marmot@body!50!black] (1.18,2.03) ellipse (0.09 and 0.13);
-\fill[\marmot@body!50!black] (0.67,2.03) ellipse (0.09 and 0.13);
+\ifmarmot@threeD
+	\shade[ball color=\marmot@body!50!black]
+\else
+	\fill[\marmot@body!50!black]
+\fi
+ (1.18,2.03) ellipse (0.09 and 0.13);
+\ifmarmot@threeD
+	\shade[ball color=\marmot@body!50!black]
+\else
+	\fill[\marmot@body!50!black]
+\fi
+ (0.67,2.03) ellipse (0.09 and 0.13);
 %
 % Tail %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\fill[\marmot@body!50!black] (1.81,0.67) .. controls (1.79,0.40) and (1.27,0.24) .. (1.26,0.44) .. controls (1.24,0.56) and (1.37,0.51) .. (1.50,0.53) .. controls (1.62,0.54) and (1.81,0.72) .. (1.81,0.67) -- cycle;
+\ifmarmot@threeD
+	\shade[ball color=\marmot@body!50!black]
+\else
+	\fill[\marmot@body!50!black]
+\fi
+ (1.81,0.67) .. controls (1.79,0.40) and (1.27,0.24) .. (1.26,0.44) .. controls (1.24,0.56) and (1.37,0.51) .. (1.50,0.53) .. controls (1.62,0.54) and (1.81,0.72) .. (1.81,0.67) -- cycle;
 %
 % Body %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\fill[\marmot@body] (1.52,0.92) .. controls (1.52,0.26) and (1.28,0.18) .. (0.95,0.18) .. controls (0.61,0.18) and (0.32,0.26) .. (0.32,0.92) .. controls (0.32,1.58) and (0.59,2.11) .. (0.92,2.11) .. controls (1.25,2.11) and (1.52,1.58) .. (1.52,0.92) -- cycle;
+\ifmarmot@threeD
+	\shade[ball color=\marmot@body]
+\else
+	\fill[\marmot@body]
+\fi
+ (1.52,0.92) .. controls (1.52,0.26) and (1.28,0.18) .. (0.95,0.18) .. controls (0.61,0.18) and (0.32,0.26) .. (0.32,0.92) .. controls (0.32,1.58) and (0.59,2.11) .. (0.92,2.11) .. controls (1.25,2.11) and (1.52,1.58) .. (1.52,0.92) -- cycle;
 %
 % Belly %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\fill[\marmot@body!50!white] (1.35,0.71) .. controls (1.35,0.41) and (1.17,0.37) .. (0.92,0.37) .. controls (0.69,0.37) and (0.48,0.41) .. (0.48,0.71) .. controls (0.48,1.01) and (0.67,1.26) .. (0.91,1.26) .. controls (1.15,1.26) and (1.35,1.01) .. (1.35,0.71) -- cycle;
+\ifmarmot@threeD
+	\shade[ball color=\marmot@body!50!white]
+\else
+	\fill[\marmot@body!50!white]
+\fi
+(1.35,0.71) .. controls (1.35,0.41) and (1.17,0.37) .. (0.92,0.37) .. controls (0.69,0.37) and (0.48,0.41) .. (0.48,0.71) .. controls (0.48,1.01) and (0.67,1.26) .. (0.91,1.26) .. controls (1.15,1.26) and (1.35,1.01) .. (1.35,0.71) -- cycle;
 %
 % Arms %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\fill[\marmot@body!50!black,rotate around={70:(1.31,0.93)}] (1.31,0.93) ellipse (0.24 and 0.13);
-\fill[\marmot@body!50!black,rotate around={-70:(0.54,0.93)}] (0.54,0.93) ellipse (0.24 and 0.13);
+\ifmarmot@threeD
+	\shade[ball color=\marmot@body!50!black,rotate around={70:(1.31,0.93)}]
+\else
+	\fill[\marmot@body!50!black,rotate around={70:(1.31,0.93)}]
+\fi
+ (1.31,0.93) ellipse (0.24 and 0.13);
+\ifmarmot@threeD
+	\shade[ball color=\marmot@body!50!black,rotate around={-70:(0.54,0.93)}]
+\else
+	\fill[\marmot@body!50!black,rotate around={-70:(0.54,0.93)}]
+\fi 
+ (0.54,0.93) ellipse (0.24 and 0.13);
 %
 % Muzzle %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\fill[\marmot@body!50!white] (0.925,1.47) ellipse (0.23 and 0.13); 
+\ifmarmot@threeD
+	\shade[ball color=\marmot@body!50!white]
+\else
+	\fill[\marmot@body!50!white]
+\fi
+ (0.925,1.47) ellipse (0.23 and 0.13); 
 %
 % Nose %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\fill[\marmot@body!50!black] (0.925,1.6) circle (0.08);
+\ifmarmot@threeD
+	\shade[ball color=\marmot@body!50!black]
+\else
+	\fill[\marmot@body!50!black]
+\fi
+ (0.925,1.6) circle (0.08);
 %
 % Eyes %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\fill[\marmot@body!50!black] (0.77,1.77) circle (0.05); 
-\fill[\marmot@body!50!black] (1.08,1.77) circle (0.05); 
+\ifmarmot@threeD
+	\shade[ball color=\marmot@body!50!black]
+\else
+	\fill[\marmot@body!50!black]
+\fi
+ (0.77,1.77) circle (0.05); 
+\ifmarmot@threeD
+	\shade[ball color=\marmot@body!50!black]
+\else
+	\fill[\marmot@body!50!black]
+\fi
+ (1.08,1.77) circle (0.05); 
 %
 % Mouth %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \draw[\marmot@body!50!black] (1.07,1.51) arc [start angle=-20, end angle=-160, radius=0.16];
