correct statistic: "According to the Groundhog Club's records, the various incarnations of Punxsutawney Phil have predicted 103 forecasts of more winter and 17 early springs. "

--- a/tikzmarmots.sty
+++ b/tikzmarmots.sty
@@ -101,9 +101,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \ifmarmot@askphil
-	\pgfmathparse{int(random(0,1))}
+	\pgfmathparse{int(random(1,120))}
 	\let\marmot@random=\pgfmathresult
-	\ifnum\marmot@random<1
+	\ifnum\marmot@random>17
 		\marmot@shadowtrue
 	\fi
 \fi
