make blush compatible with 3D marmot

--- a/tikzmarmots.sty
+++ b/tikzmarmots.sty
@@ -20,6 +20,11 @@
 
 \RequirePackage{tikz}
 \usetikzlibrary{shadows.blur}
+\usetikzlibrary{fadings} 
+
+\tikzfading[name=marmot@blush,
+inner color=transparent!50,
+outer color=transparent!100]
 
 \RequirePackage{ifluatex}
 \RequirePackage{ifxetex}
@@ -158,8 +163,8 @@
 %
 % Blushed %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \ifmarmot@blush
-	\shade[inner color=red!30!\marmot@body,outer color=\marmot@body] (0.63,1.6) circle (0.1); 
-	\shade[inner color=red!30!\marmot@body,outer color=\marmot@body] (1.22,1.6) circle (0.1); 
+	\fill[red,path fading=marmot@blush] (0.63,1.6) circle (0.1); 
+	\fill[red,path fading=marmot@blush] (1.22,1.6) circle (0.1); 
 \fi
 %
 % Wiskers %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
