insert warning about new version included in the tikzlings package

--- a/tikzmarmots-doc.tex
+++ b/tikzmarmots-doc.tex
@@ -10,8 +10,8 @@
 % Released under the LaTeX Project Public License v1.3c or later
 % See http://www.latex-project.org/lppl.txt
 %
-% Version 0.1
-% July 10, 2018  
+% Version 0.2
+% Sep 11, 2018  
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[parskip=half]{scrartcl}
@@ -113,11 +113,16 @@
 		\url{https://github.com/samcarter8/tikzmarmots}\\
 		\url{https://www.ctan.org/pkg/tikzmarmots}
 	}{samcarter}}
-\date{Version 0.1 -- \today}
+\date{Version 0.2 -- \today}
 
 \begin{document}
 \maketitle
 \thispagestyle{scrheadings}
+
+\begin{tcolorbox}[coltext=marmotred,width=.8\textwidth,center,	sidebyside=false,	bottom=10pt,top=10pt]
+The \tikzmarmots package was merged into the Ti\emph{k}Zlings package. To get an up-to-date version, please load the {\color{duckblue}\lstinline|tikzlings-marmots|} or the more general {\color{duckblue}\lstinline|tikzlings|} package instead.
+\end{tcolorbox}
+
 
 \section{Introduction}
 \label{intro}
