--- a/tikzmarmots.sty
+++ b/tikzmarmots.sty
@@ -11,12 +11,14 @@
 % Released under the LaTeX Project Public License v1.3c or later
 % See http://www.latex-project.org/lppl.txt
 %
-% Version 0.1
-% July 10, 2018  
+% Version 0.2
+% Sep 11, 2018  
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \ProvidesPackage{tikzmarmots}
- [2018/07/08 v0.1 Drawing marmots in TikZ]
+ [2018/09/11 v0.2 Drawing marmots in TikZ]
+ 
+\PackageWarning{tikzmarmots}{The TikZmarmots package was merged into the TikZlings package, please load the package `tikzlings-marmots` or the more general `tikzlings` package instead} 
 
 \RequirePackage{tikz}
 \usetikzlibrary{shadows.blur}
