--- a/tikzmarmots-doc.tex
+++ b/tikzmarmots-doc.tex
@@ -11,116 +11,65 @@
 % See http://www.latex-project.org/lppl.txt
 %
 % Version 1.0
-% Nov 8, 2018  
+% Nov 8, 2018
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% !TeX program = txs:///arara
+% arara: latexmk: {
+% arara: --> engine: pdflatex,
+% arara: --> options: [
+% arara: -->    '-shell-escape',
+% arara: -->    '-synctex=1',
+% arara: -->    '-interaction=nonstopmode',
+% arara: -->  ]
+% arara: --> }
 \documentclass[parskip=half]{scrartcl}
-
-% packages %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage[T1]{fontenc}	
-\usepackage[utf8]{inputenc}		
-\usepackage[english]{babel}
-\usepackage[bitstream-charter]{mathdesign}
-\usepackage{tikzducks}
-\usetikzlibrary{ducks}
-\usepackage{tikzmarmots}
-\usetikzlibrary{marmots}
-\usepackage[most]{tcolorbox}
-\usepackage[paper=a4paper,margin=3cm]{geometry}
-\usepackage{url}
-\usepackage{xspace}
-\usepackage{scrlayer-scrpage} 
-\usepackage{marvosym}
-\usepackage{fontawesome}
-\usepackage[hang,flushmargin,bottom]{footmisc}
-\usepackage{imakeidx}
-\usepackage[colorlinks=true,breaklinks=true,urlcolor=duckblue,linkcolor=duckblue,citecolor=duckblue,filecolor=duckblue]{hyperref}
-
-% macros %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\CTAN}{\textsc{CTAN}\xspace}
-\newcommand{\TikZ}{Ti\emph{k}Z\xspace}
-\newcommand{\tikzducks}{Ti\emph{k}Zducks\xspace}
-\newcommand{\tikzmarmots}{Ti\emph{k}Zmarmots\xspace}
-\newcommand{\miktex}{MiK\TeX\xspace}
-\newcommand{\texlive}{\TeX{}Live\xspace}
-
-% customisation %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\definecolor{duckblue}{RGB}{0,70,140}
-\definecolor{marmotred}{RGB}{140,20,40}
-\addtokomafont{sectioning}{\color{marmotred}}
-\addtokomafont{date}{\normalsize}
-\addtokomafont{author}{\normalsize}
-\setlength{\footnotemargin}{0.7em}
-
-\lstdefinestyle{marmotstyle}{%
-	language={[latex]TeX},
-	tabsize=2,
-	breaklines,
-	basicstyle=\footnotesize\ttfamily,
-	commentstyle={\color{green!50!black}\slshape}, 
-	columns=fullflexible,
-	emphstyle=\color{orange!70!black},
-	emph=[1]{body,blush,whiskers,invisible,cake,crown,teeth,3D,shadow,askphil,scale,xshift,yshift},
-	texcsstyle=*\color{duckblue}\bfseries,
-	keywordstyle=\color{red!60!black}\bfseries,
-	morekeywords={tikzpicture,scope,patterns,calc,pgfinterruptboundingbox},
-	moretexcs={marmot,path,definecolor,scalebox,foreach,node,draw,PassOptionsToPackage,usetikzlibrary,selectcolormodel,colorlet,includegraphics,tikzset,shade,duck},
-	delim ={[s][\ttfamily\color{green!50!black}]{$}{$}},
-	moredelim=[is][\footnotesize\ttfamily\color{orange!70!black}]{|}{|},
-	index=[1][emph]
-}
-
-\tcbset{%
-	colframe=marmotred,
-	arc=2mm,
-	fonttitle=\bfseries,
-	sidebyside,
-	listing options={style=marmotstyle},
-	center lower,
-	righthand width=6.5cm,
-	bottom=0pt, 
-	top=0pt,
-	before lower={%
-		\setlength{\parskip}{0.5cm}%
-		\spaceskip=5\fontdimen2\font%
-	},
-}
-
-\lstset{style=marmotstyle}
-
-\setlength{\footheight}{45pt}
-
-\cfoot{%
-	\begin{tikzpicture}[scale=0.5] 
-		\marmot
-		\duck[invisible,signpost=\scalebox{0.6}{\thepage}]
-	\end{tikzpicture}
-} 
-\pagestyle{scrheadings}
-%\indexsetup{firstpagestyle=scrheadings}
-%\makeindex
 
 % meta %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{The \texorpdfstring{\tikzmarmots}{tikzmarmots} package}
 \subtitle{using marmots in \TikZ}
 \author{%
-	\texorpdfstring{\texttt{samcarter} (alias 
-		\begin{tikzpicture}[scale=0.3,baseline=3pt]
-			\duck[body=yellow!50!brown!50!white,
-					longhair=red!50!brown, 
-					jacket=blue!50!black]
-		\end{tikzpicture})\\[0.8em]
-		\url{https://github.com/samcarter/tikzmarmots}\\
-		\url{https://www.ctan.org/pkg/tikzmarmots}
-	}{samcarter}}
+  \texorpdfstring{
+    \begin{tikzpicture}
+     \marmot
+    \end{tikzpicture}\\[0.8em]
+    \texttt{samcarter}\\
+    \url{https://github.com/samcarter/tikzmarmots}\\
+    \url{https://www.ctan.org/pkg/tikzmarmots}
+  }{samcarter}}
 \date{Version 1.0 -- \today}
+
+\usepackage[
+  themecolor=sammagenta
+]{\jobname-settings}
+
+\colorlet{blue}{samdblue}
+
+\usepackage{tikzducks}
+\usetikzlibrary{ducks}
+\usepackage{tikzmarmots}
+\usetikzlibrary{marmots}
+\usepackage{marvosym}
+\usepackage{fontawesome}
+
+% customisation %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\setlength{\footnotemargin}{0.7em}
+\setlength{\footheight}{45pt}
+
+\cfoot{%
+  \begin{tikzpicture}[scale=0.5] 
+    \marmot
+    \duck[invisible,signpost=\scalebox{0.6}{\thepage}]
+  \end{tikzpicture}
+}
+\pagestyle{scrheadings}
 
 \begin{document}
 \maketitle
 \thispagestyle{scrheadings}
 
-\begin{tcolorbox}[coltext=marmotred,width=.8\textwidth,center,	sidebyside=false,	bottom=10pt,top=10pt]
-The \tikzmarmots package was merged into the Ti\emph{k}Zlings package. To get an up-to-date version, please load the {\color{duckblue}\lstinline|tikzlings-marmots|} or the more general {\color{duckblue}\lstinline|tikzlings|} package instead.
+\begin{tcolorbox}[coltext=themecolor,width=.8\textwidth,center,sidebyside=false,bottom=10pt,top=10pt]
+The \tikzmarmots package was merged into the Ti\emph{k}Zlings package. To get an up-to-date version, please load the \saminline|tikzlings-marmots| or the more general \saminline|tikzlings| package instead.
 \end{tcolorbox}
 
 
@@ -135,47 +84,37 @@ This package is work in progress, therefore I would be happy to hear your feedba
 A more stable package version can be found on \CTAN (\url{www.ctan.org/pkg/tikzmarmots}) and is included in both \miktex and \texlive as \tikzmarmots. 
 If you seek any other assistance (not bug reports/feature requests), I suggest asking on \href{https://tex.stackexchange.com}{TeX.Stackexchange}.
 
-\subsection{License}
-
 Copyright \raisebox{0.2em}{\tiny\fontfamily{cmr}\selectfont\textcopyright}
 \texttt{samcarter}. Permission is granted to copy, distribute and\slash or modify this software under the terms of the LaTeX project public licence, version 1.3c or later \url{http://www.latex-project.org/lppl.txt}.
 
 The shown example marmots are purely fictional characters, any resemblance to real marmots or persons is purely coincidental and no copyright infringement is intended.
-
-\subsection{Dependencies}
-
-The \tikzmarmots package loads \TikZ, which in turn loads the \lstinline|xcolor| package (amongst others). If you require one of these packages to be loaded with some option, please consider loading it yourself before the \tikzmarmots package or use, e.g.
-
-\begin{lstlisting}[aboveskip=1.2em,morekeywords={xcolor,svgnames}]
-	\PassOptionsToPackage{svgnames}{xcolor}
-\end{lstlisting}
 
 \section{Usage}
 
 The basic usage is fairly simple, to draw a marmot:
 \begin{tcblisting}{title={Basic marmot}}
 \begin{tikzpicture}
-	\marmot
+  \marmot
 \end{tikzpicture}
 \end{tcblisting}
 
-To customise this basic marmot, the package uses \lstinline|pgf| keys. 
+To customise this basic marmot, the package uses \saminline|pgf| keys. 
 
-These keys can for example be used to change the marmot's colour via \lstinline|body=<colour name>|. 
+These keys can for example be used to change the marmot's colour via \saminline|body=<colour name>|. 
 
 \begin{tcblisting}{title={Blue marmot}}
 \begin{tikzpicture}
-	\marmot[body=blue]
+  \marmot[body=blue]
 \end{tikzpicture}
 \end{tcblisting}
 
 The colour of the belly and muzzle will use a lighter shade of the selected colour, while a darker shade is chosen for paws, nose and eyes.
 
-The key \lstinline|3D| will make the marmot 3-dimensional:
+The key \saminline|3D| will make the marmot 3-dimensional:
 
 \begin{tcblisting}{title={3D marmot}}
 \begin{tikzpicture}
-	\marmot[3D]
+  \marmot[3D]
 \end{tikzpicture}
 \end{tcblisting}
 
@@ -183,10 +122,10 @@ Keys can also be used to add whiskers to the marmot:
 
 \begin{tcblisting}{title={Whiskers}}
 \begin{tikzpicture}
-	\marmot[whiskers]
+  \marmot[whiskers]
 \end{tikzpicture}
 \begin{tikzpicture}
-	\marmot[whiskers=blue]
+  \marmot[whiskers=blue]
 \end{tikzpicture}
 \end{tcblisting}
 
@@ -194,7 +133,7 @@ Or to make it blush:
 
 \begin{tcblisting}{title={Blushing marmot}}
 \begin{tikzpicture}
-	\marmot[blush]
+  \marmot[blush]
 \end{tikzpicture}
 \end{tcblisting}
 
@@ -202,7 +141,7 @@ Some marmots even show their chisel teeth:
 
 \begin{tcblisting}{title={Chisel teeth}}
 \begin{tikzpicture}
-	\marmot[teeth]
+  \marmot[teeth]
 \end{tikzpicture}
 \end{tcblisting}
 
@@ -210,34 +149,36 @@ The marmots also can cast a shadow:
 
 \begin{tcblisting}{title={Shadow}}
 \begin{tikzpicture}
-	\marmot[shadow]
+  \marmot[shadow]
 \end{tikzpicture}
 \end{tcblisting}
 
-This ability is important if you want to ask Punxsutawney Phil\footnote{\url{https://en.wikipedia.org/wiki/Punxsutawney_Phil}} on Groundhog Day how the weather is going to be. With a probability derived from the statistics of 120 Groundhog Days\footnote{\url{https://www.livescience.com/32974-punxsutawney-phil-weather-prediction-accuracy.html}} the option \lstinline|askphil| might or might not result in a shadow.
+This ability is important if you want to ask Punxsutawney Phil\footnote{\url{https://en.wikipedia.org/wiki/Punxsutawney_Phil}} on Groundhog Day how the weather is going to be. With a probability derived from the statistics of 120 Groundhog Days\footnote{\url{https://www.livescience.com/32974-punxsutawney-phil-weather-prediction-accuracy.html}} the option \saminline|askphil| might or might not result in a shadow.
 
 \begin{tcblisting}{title={Ask Phil}}
 \begin{tikzpicture}
-	\marmot[askphil]
+  \marmot[askphil]
 \end{tikzpicture}
 \end{tcblisting}
-
 
 If the size of the marmots should be changed or shifted:
 
 \begin{tcblisting}{title={Scaled and shifted marmots}, righthand width=3cm}
 \begin{tikzpicture}[scale=0.6]
-	\marmot
-	\marmot[xshift=90pt, scale=.5, yshift=150pt,body=brown!80!gray]
-	\marmot[xshift=60pt, scale=.5, yshift=100pt,body=brown!80!yellow]
-	\marmot[xshift=80pt, scale=.5, yshift=50pt,body=brown!80!red]	
+  \marmot
+  \marmot[xshift=90pt, scale=.5,
+          yshift=150pt,body=brown!80!gray]
+  \marmot[xshift=60pt, scale=.5,
+          yshift=100pt,body=brown!80!yellow]
+  \marmot[xshift=80pt, scale=.5,
+          yshift=50pt,body=brown!80!red]
 \end{tikzpicture}
 \end{tcblisting}
 
-To make the usage easier for the \TikZ-savvy users, the marmots can also be used as \TikZ library. It can be loaded with \lstinline|\usetikzlibrary{marmots}|. In addition to the normal functionality of the \tikzmarmots package, the marmots are now also available as \lstinline|pic|. A short example:
+To make the usage easier for the \TikZ-savvy users, the marmots can also be used as \TikZ library. It can be loaded with \saminline|\usetikzlibrary{marmots}|. In addition to the normal functionality of the \tikzmarmots package, the marmots are now also available as \saminline|pic|. A short example:
 
 \begin{tcolorbox}[title={\TikZ library ``marmots''}]
-\begin{lstlisting}[morekeywords={marmots,duck,standalone,tikz,document}]
+\begin{samcode}
 \documentclass{standalone}
 
 \usepackage{tikz}
@@ -256,7 +197,7 @@ To make the usage easier for the \TikZ-savvy users, the marmots can also be used
 \end{tikzpicture}
 
 \end{document}
-\end{lstlisting} 
+\end{samcode}
 
 \tcblower
 \begin{tikzpicture}
@@ -276,22 +217,22 @@ The above list of available customisations does not sound very exhaustive, but t
 
 \begin{tcblisting}{title={Adding things to the marmot}}
 \begin{tikzpicture}
-	\marmot
-	\fill[blue] (2,0) rectangle (1,1);
+  \marmot
+  \fill[blue] (2,0) rectangle (1,1);
 \end{tikzpicture}
 \end{tcblisting}
 
 %\begin{tcblisting}{title={Monochrome marmot}}
 %\begin{tikzpicture}
-%	\selectcolormodel{gray}
-%	\marmot
+%  \selectcolormodel{gray}
+%  \marmot
 %\end{tikzpicture}
 %\end{tcblisting}
 
 \section{Re-using accessories from the \tikzducks package}
 
 As already said in the introduction, this package focuses on the marmots themselves and does not provide additional accessories. 
-However there is no need to despair! Many of the accessories from the \tikzducks package (\url{https://www.ctan.org/pkg/tikzducks}) can be re-used using the \lstinline|invisible| key which will only produce the desired item without a duck.
+However there is no need to despair! Many of the accessories from the \tikzducks package (\url{https://www.ctan.org/pkg/tikzducks}) can be re-used using the \saminline|invisible| key which will only produce the desired item without a duck.
 
 The marmots are designed to have the same height as the ducks, so many items can be adopted without any modifications. One example:
 
@@ -299,9 +240,9 @@ The marmots are designed to have the same height as the ducks, so many items can
 \begin{tcblisting}{title={Marmot Queen$^{\thefootnote}$}}
 %\usepackage{tikzducks}
 \begin{tikzpicture}
-	\marmot
-	\duck[invisible,crown]
-\end{tikzpicture}	
+  \marmot
+  \duck[invisible,crown]
+\end{tikzpicture}
 \end{tcblisting}
 \footnotetext[\thefootnote]{The Marmot Queen is inspired by \href{http://www.ilregnodeifanes.it/inglese/summary.htm}{The Fanes' saga}}
 
@@ -310,11 +251,13 @@ Unfortunately not all accessories will work. Some are entirely unsuitable (e.g. 
 \begin{tcblisting}{title={Happy Birthday!}}
 %\usepackage{tikzducks}
 \begin{tikzpicture}
-	\marmot
-	\duck[invisible, cake=red!50!violet, scale=0.7, xshift=9, yshift=18]
-\end{tikzpicture}	
+  \marmot
+  \duck[invisible, cake=red!50!violet,
+        scale=0.7, xshift=9, yshift=18]
+\end{tikzpicture}
 \end{tcblisting}
 
-For a complete list of available accessories, please see the documentation of the \tikzducks package (\url{http://mirrors.ctan.org/graphics/pgf/contrib/tikzducks/tikzducks-doc.pdf}) 
+For a complete list of available accessories, please see the documentation of the \tikzducks package 
+(\url{https://mirrors.ctan.org/graphics/pgf/contrib/tikzducks/tikzducks-doc.pdf}).
 
 \end{document}
