doc: adjust to colour scheme

--- a/tikzmarmots-doc.tex
+++ b/tikzmarmots-doc.tex
@@ -43,7 +43,7 @@
   themecolor=sammagenta
 ]{\jobname-settings}
 
-\colorlet{blue}{samdblue}
+\colorlet{blue}{samlblue}
 
 \usepackage{tikzducks}
 \usetikzlibrary{ducks}
