--- a/tikzmarmots-doc.tex
+++ b/tikzmarmots-doc.tex
@@ -23,7 +23,7 @@
 % arara: -->    '-interaction=nonstopmode',
 % arara: -->  ]
 % arara: --> }
-\documentclass[parskip=half]{scrartcl}
+\documentclass{scrartcl}
 
 % meta %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{The \texorpdfstring{\tikzmarmots}{tikzmarmots} package}
