--- a/tikzmarmots.sty
+++ b/tikzmarmots.sty
@@ -12,7 +12,6 @@
 % See http://www.latex-project.org/lppl.txt
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\ProvidesPackage{tikzmarmots}
- [2024/04/17 v2.0 Drawing marmots in TikZ]
+\ProvidesPackage{tikzmarmots}[2024/04/17 version v2.0 Drawing marmots in TikZ]
 
 \RequirePackage{tikzlings-marmots}
