--- a/tikzmarmots-doc.tex
+++ b/tikzmarmots-doc.tex
@@ -34,7 +34,7 @@
     \url{https://github.com/samcarter/tikzmarmots}\\
     \url{https://www.ctan.org/pkg/tikzmarmots}
   }{samcarter}}
-\date{Version 2.0 -- \today}
+\date{Version v2.0 \textendash{} 2024/04/17}
 
 \usepackage[
   themecolor=sammagenta
@@ -128,7 +128,7 @@
 \maketitle
 \thispagestyle{scrheadings}
 
-\begin{tcolorbox}[coltext=themecolor,width=.8\textwidth,center,sidebyside=false,bottom=10pt,top=10pt]
+\begin{tcolorbox}[coltext=themecolor,width=.8\textwidth,center,sidebyside=false,title={Note}]
 The \tikzmarmots package was merged into the Ti\emph{k}Zlings package and, starting with version 2.0, is now a wrapper around the \saminline|tikzlings-marmots| package. 
 
 To access the previous version, use \saminline|\usepackage{tikzmarmots}[v1]|.
