doc: simplified footnotes in tcolorbox titles

--- a/tikzmarmots-doc.tex
+++ b/tikzmarmots-doc.tex
@@ -229,9 +229,7 @@ The above list of available customisations does not sound very exhaustive, but t
 As already said in the introduction, this package focuses on the marmots themselves and does not provide additional accessories.
 However there is no need to despair! There are many accessories available from the \saminline|tikzlings-addons| package (\url{https://www.ctan.org/pkg/tikzlings}).
 
-\addtocounter{footnote}{1}
-\footnotetext[\thefootnote]{The Marmot Queen is inspired by \href{http://www.ilregnodeifanes.it/inglese/summary.htm}{The Fanes' saga}}
-\begin{tcblisting}{title={Marmot Queen$^{\thefootnote}$}}
+\begin{tcblisting}{title={Marmot Queen\footnote{The Marmot Queen is inspired by \href{http://www.ilregnodeifanes.it/inglese/summary.htm}{The Fanes' saga}}}}
 %\usepackage{tikzlings-addons}
 \begin{tikzpicture}
   \marmot
